wasm: creating textures

--- a/wasm/example.html
+++ b/wasm/example.html
@@ -1,5 +1,5 @@
 <html>
-  <head><title>Casein Proof-of-Concept</title></head>
+  <head><title>Oto Proof-of-Concept</title></head>
   <body>
     <script type="text/javascript">
       var exp;
